--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "apollo-server-express": "^2.19.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "global": "^4.4.0",
     "graphql": "^15.4.0",
     "graphql-passport": "^0.6.3",
+    "heroku": "^7.47.3",
     "passport": "^0.4.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
